# FFOFps

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  REVERSE.md
cmake/: VC-LTL helper for cmake.cmake  create_library.cmake
common/: CMakeLists.txt  byte_pattern.cpp  byte_pattern.h  patch.cpp  patch.h
common/injector/: assembly.hpp  injector.hpp
common/injector/gvm/: gvm.hpp
d3d8/: CMakeLists.txt  d3d8.cpp  d3d8.def
d3d9/: CMakeLists.txt  d3d9.cpp  d3d9.def
ddraw/: CMakeLists.txt  ddraw.cpp  ddraw.def
opengl32/: CMakeLists.txt  exports.txt  opengl32.cpp  opengl32.def
